create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5232,3 +5232,845 @@ a {
 .cid-sZYKqFz1Zr .media-container-row .row-copirayt p {
   width: 100%;
 }
+.cid-tnDn5i3hde {
+  z-index: 1000;
+  width: 100%;
+  position: relative;
+  min-height: 60px;
+}
+.cid-tnDn5i3hde nav.navbar {
+  position: fixed;
+}
+.cid-tnDn5i3hde .dropdown-item:before {
+  font-family: Moririse2 !important;
+  content: "\e966";
+  display: inline-block;
+  width: 0;
+  position: absolute;
+  left: 1rem;
+  top: 0.5rem;
+  margin-right: 0.5rem;
+  line-height: 1;
+  font-size: inherit;
+  vertical-align: middle;
+  text-align: center;
+  overflow: hidden;
+  transform: scale(0, 1);
+  transition: all 0.25s ease-in-out;
+}
+.cid-tnDn5i3hde .dropdown-menu {
+  padding: 0;
+  border-radius: 4px;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+}
+.cid-tnDn5i3hde .dropdown-item {
+  border-bottom: 1px solid #e6e6e6;
+}
+.cid-tnDn5i3hde .dropdown-item:hover,
+.cid-tnDn5i3hde .dropdown-item:focus {
+  background: #004669 !important;
+  color: white !important;
+}
+.cid-tnDn5i3hde .dropdown-item:hover span {
+  color: white;
+}
+.cid-tnDn5i3hde .dropdown-item:first-child {
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+.cid-tnDn5i3hde .dropdown-item:last-child {
+  border-bottom: none;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+.cid-tnDn5i3hde .nav-dropdown .link {
+  padding: 0 0.3em !important;
+  margin: 0.667em 1em !important;
+}
+.cid-tnDn5i3hde .nav-dropdown .link.dropdown-toggle::after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+}
+.cid-tnDn5i3hde .nav-link {
+  position: relative;
+}
+.cid-tnDn5i3hde .container {
+  display: flex;
+  margin: auto;
+}
+@media (min-width: 992px) {
+  .cid-tnDn5i3hde .container {
+    flex-wrap: nowrap;
+  }
+}
+.cid-tnDn5i3hde .iconfont-wrapper {
+  color: #ffffff !important;
+  font-size: 1.5rem;
+  padding-right: 0.5rem;
+}
+.cid-tnDn5i3hde .dropdown-menu,
+.cid-tnDn5i3hde .navbar.opened {
+  background: #000000 !important;
+}
+.cid-tnDn5i3hde .nav-item:focus,
+.cid-tnDn5i3hde .nav-link:focus {
+  outline: none;
+}
+.cid-tnDn5i3hde .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  transition: all 0.25s ease-in-out;
+}
+.cid-tnDn5i3hde .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-tnDn5i3hde .dropdown .dropdown-menu .dropdown-item .mbr-iconfont {
+  margin-right: 0.5rem;
+  vertical-align: sub;
+}
+.cid-tnDn5i3hde .dropdown .dropdown-menu .dropdown-item .mbr-iconfont:before {
+  display: inline-block;
+  transform: scale(1, 1);
+  transition: all 0.25s ease-in-out;
+}
+.cid-tnDn5i3hde .collapsed .dropdown-menu .dropdown-item:before {
+  display: none;
+}
+.cid-tnDn5i3hde .collapsed .dropdown .dropdown-menu .dropdown-item {
+  padding: 0.235em 1.5em 0.235em 1.5em !important;
+  transition: none;
+  margin: 0 !important;
+}
+.cid-tnDn5i3hde .navbar {
+  min-height: 70px;
+  transition: all 0.3s;
+  border-bottom: 1px solid transparent;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+  background: #000000;
+}
+.cid-tnDn5i3hde .navbar.opened {
+  transition: all 0.3s;
+}
+.cid-tnDn5i3hde .navbar .dropdown-item {
+  padding: 0.5rem 1.8rem;
+}
+.cid-tnDn5i3hde .navbar .navbar-logo img {
+  width: auto;
+}
+.cid-tnDn5i3hde .navbar .navbar-collapse {
+  justify-content: flex-end;
+  z-index: 1;
+}
+.cid-tnDn5i3hde .navbar.collapsed {
+  justify-content: center;
+}
+.cid-tnDn5i3hde .navbar.collapsed .nav-item .nav-link::before {
+  display: none;
+}
+.cid-tnDn5i3hde .navbar.collapsed.opened .dropdown-menu {
+  top: 0;
+}
+@media (min-width: 992px) {
+  .cid-tnDn5i3hde .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3rem);
+  }
+}
+.cid-tnDn5i3hde .navbar.collapsed .dropdown-menu .dropdown-submenu {
+  left: 0 !important;
+}
+.cid-tnDn5i3hde .navbar.collapsed .dropdown-menu .dropdown-item:after {
+  right: auto;
+}
+.cid-tnDn5i3hde .navbar.collapsed .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+  border-top: 0.35em solid;
+  border-right: 0.35em solid transparent;
+  border-left: 0.35em solid transparent;
+  border-bottom: 0;
+  top: 41%;
+}
+.cid-tnDn5i3hde .navbar.collapsed ul.navbar-nav li {
+  margin: auto;
+}
+.cid-tnDn5i3hde .navbar.collapsed .dropdown-menu .dropdown-item {
+  padding: 0.25rem 1.5rem;
+  text-align: center;
+}
+.cid-tnDn5i3hde .navbar.collapsed .icons-menu {
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+@media (max-width: 991px) {
+  .cid-tnDn5i3hde .navbar .nav-item .nav-link::before {
+    display: none;
+  }
+  .cid-tnDn5i3hde .navbar.opened .dropdown-menu {
+    top: 0;
+  }
+  .cid-tnDn5i3hde .navbar .dropdown-menu .dropdown-submenu {
+    left: 0 !important;
+  }
+  .cid-tnDn5i3hde .navbar .dropdown-menu .dropdown-item:after {
+    right: auto;
+  }
+  .cid-tnDn5i3hde .navbar .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+    margin-left: 0.5rem;
+    margin-top: 0.2rem;
+    border-top: 0.35em solid;
+    border-right: 0.35em solid transparent;
+    border-left: 0.35em solid transparent;
+    border-bottom: 0;
+    top: 40%;
+  }
+  .cid-tnDn5i3hde .navbar .navbar-logo img {
+    height: 3rem !important;
+  }
+  .cid-tnDn5i3hde .navbar ul.navbar-nav li {
+    margin: auto;
+  }
+  .cid-tnDn5i3hde .navbar .dropdown-menu .dropdown-item {
+    padding: 0.25rem 1.5rem !important;
+    text-align: center;
+  }
+  .cid-tnDn5i3hde .navbar .navbar-brand {
+    flex-shrink: initial;
+    flex-basis: auto;
+    word-break: break-word;
+    padding-right: 2rem;
+  }
+  .cid-tnDn5i3hde .navbar .navbar-toggler {
+    flex-basis: auto;
+  }
+  .cid-tnDn5i3hde .navbar .icons-menu {
+    padding-left: 0;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+}
+.cid-tnDn5i3hde .navbar.navbar-short {
+  min-height: 60px;
+}
+.cid-tnDn5i3hde .navbar.navbar-short .navbar-logo img {
+  height: 2.5rem !important;
+}
+.cid-tnDn5i3hde .navbar.navbar-short .navbar-brand {
+  min-height: 60px;
+  padding: 0;
+}
+.cid-tnDn5i3hde .navbar-brand {
+  min-height: 70px;
+  flex-shrink: 0;
+  align-items: center;
+  margin-right: 0;
+  padding: 10px 0;
+  transition: all 0.3s;
+  word-break: break-word;
+  z-index: 1;
+}
+.cid-tnDn5i3hde .navbar-brand .navbar-caption {
+  line-height: inherit !important;
+}
+.cid-tnDn5i3hde .navbar-brand .navbar-logo a {
+  outline: none;
+}
+.cid-tnDn5i3hde .dropdown-item.active,
+.cid-tnDn5i3hde .dropdown-item:active {
+  background-color: transparent;
+}
+.cid-tnDn5i3hde .navbar-expand-lg .navbar-nav .nav-link {
+  padding: 0;
+}
+.cid-tnDn5i3hde .nav-dropdown .link.dropdown-toggle {
+  margin-right: 1.667em;
+}
+.cid-tnDn5i3hde .nav-dropdown .link.dropdown-toggle[aria-expanded="true"] {
+  margin-right: 0;
+  padding: 0.667em 1.667em;
+}
+.cid-tnDn5i3hde .navbar.navbar-expand-lg .dropdown .dropdown-menu {
+  background: #000000;
+}
+.cid-tnDn5i3hde .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+  left: 100%;
+}
+.cid-tnDn5i3hde .navbar .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-tnDn5i3hde ul.navbar-nav {
+  flex-wrap: wrap;
+}
+.cid-tnDn5i3hde .navbar-buttons {
+  text-align: center;
+  min-width: 170px;
+}
+.cid-tnDn5i3hde button.navbar-toggler {
+  outline: none;
+  width: 31px;
+  height: 20px;
+  cursor: pointer;
+  transition: all 0.2s;
+  position: relative;
+  align-self: center;
+}
+.cid-tnDn5i3hde button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #ffffff;
+}
+.cid-tnDn5i3hde button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all 0.2s;
+}
+.cid-tnDn5i3hde button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all 0.15s;
+}
+.cid-tnDn5i3hde button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all 0.15s;
+}
+.cid-tnDn5i3hde button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all 0.2s;
+}
+.cid-tnDn5i3hde nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all 0.2s;
+}
+.cid-tnDn5i3hde nav.opened .hamburger span:nth-child(2) {
+  transform: rotate(45deg);
+  transition: all 0.25s;
+}
+.cid-tnDn5i3hde nav.opened .hamburger span:nth-child(3) {
+  transform: rotate(-45deg);
+  transition: all 0.25s;
+}
+.cid-tnDn5i3hde nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all 0.2s;
+}
+.cid-tnDn5i3hde .navbar-dropdown {
+  padding: 0 1rem;
+  position: fixed;
+}
+.cid-tnDn5i3hde a.nav-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cid-tnDn5i3hde .icons-menu {
+  flex-wrap: nowrap;
+  display: flex;
+  justify-content: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.3rem;
+  text-align: center;
+}
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .cid-tnDn5i3hde .navbar {
+    height: 70px;
+  }
+  .cid-tnDn5i3hde .navbar.opened {
+    height: auto;
+  }
+  .cid-tnDn5i3hde .nav-item .nav-link:hover::before {
+    width: 175%;
+    max-width: calc(100% + 2rem);
+    left: -1rem;
+  }
+}
+.cid-tnDmHJYwa8 {
+  background-color: #000000;
+}
+.cid-tnDmHJYwa8 .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-tnDmHJYwa8 .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-tnDmHJYwa8 .row {
+  flex-direction: row-reverse;
+}
+@media (max-width: 991px) {
+  .cid-tnDmHJYwa8 .image-wrapper {
+    margin-bottom: 2rem;
+  }
+}
+.cid-tnDmHJYwa8 .image-wrapper img {
+  width: 100%;
+  object-fit: cover;
+}
+@media (min-width: 992px) {
+  .cid-tnDmHJYwa8 .text-wrapper {
+    padding: 0 2rem;
+    padding: 0 4rem;
+  }
+}
+@media (max-width: 768px) {
+  .cid-tnDmHJYwa8 .text-wrapper {
+    margin-bottom: 2rem;
+  }
+}
+.cid-tnDmHJYwa8 .mbr-section-title {
+  color: #ffffff;
+  text-align: right;
+}
+.cid-tnDmHJYwa8 .mbr-text,
+.cid-tnDmHJYwa8 .mbr-section-btn {
+  color: #ffffff;
+  text-align: right;
+}
+.cid-tnDoHSYKxu {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #000000;
+}
+.cid-tnDoHSYKxu .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-tnDoHSYKxu .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-tnDoHSYKxu .item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 2rem;
+}
+@media (min-width: 991px) {
+  .cid-tnDoHSYKxu .item {
+    margin-bottom: 4rem;
+  }
+}
+.cid-tnDoHSYKxu .item:last-child .icon-box:before {
+  display: none;
+}
+.cid-tnDoHSYKxu .item.last .icon-box:before {
+  display: none;
+}
+.cid-tnDoHSYKxu .icon-box {
+  background: #004669;
+  width: 60px;
+  min-width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  margin-right: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+@media (max-width: 768px) {
+  .cid-tnDoHSYKxu .icon-box {
+    margin-right: 1rem;
+  }
+}
+.cid-tnDoHSYKxu .icon-box::before {
+  content: "\e925";
+  font-family: Moririse2 !important;
+  position: absolute;
+  font-size: 32px;
+  left: 50%;
+  top: 120%;
+  color: #004669;
+  transform: translate(-50%, 0);
+}
+.cid-tnDoHSYKxu span {
+  font-size: 2rem;
+  color: #ffffff;
+}
+@media (max-width: 991px) {
+  .cid-tnDoHSYKxu .card {
+    margin-bottom: 2rem;
+  }
+  .cid-tnDoHSYKxu .card-wrapper {
+    margin-bottom: 2rem;
+  }
+  .cid-tnDoHSYKxu .icon-box::before {
+    top: 141%;
+  }
+}
+@media (max-width: 768px) {
+  .cid-tnDoHSYKxu .icon-box::before {
+    top: 114%;
+  }
+}
+.cid-tnDoHSYKxu .card-title,
+.cid-tnDoHSYKxu .card-box {
+  color: #ffffff;
+}
+.cid-tnDoHSYKxu .icon-text {
+  color: #ffffff;
+}
+.cid-tnDoHSYKxu .icon-title {
+  color: #004669;
+}
+.cid-tnDs7AVXsC {
+  padding-top: 10rem;
+  padding-bottom: 10rem;
+  background-color: #000000;
+}
+.cid-tnDs7AVXsC img,
+.cid-tnDs7AVXsC .item-img {
+  width: 100%;
+}
+.cid-tnDs7AVXsC .item:focus,
+.cid-tnDs7AVXsC span:focus {
+  outline: none;
+}
+.cid-tnDs7AVXsC .item-wrapper {
+  position: relative;
+}
+.cid-tnDs7AVXsC .slide-content {
+  position: relative;
+  border-radius: 4px;
+  background: #004669;
+  height: 100%;
+  display: flex;
+  overflow: hidden;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-tnDs7AVXsC .slide-content .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tnDs7AVXsC .slide-content .item-content {
+    padding: 1rem;
+  }
+}
+.cid-tnDs7AVXsC .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-tnDs7AVXsC .mbr-section-title {
+  color: #ffffff;
+}
+.cid-tnDs7AVXsC .mbr-text,
+.cid-tnDs7AVXsC .mbr-section-btn {
+  text-align: left;
+  color: #ffffff;
+}
+.cid-tnDs7AVXsC .item-title {
+  text-align: left;
+  color: #ffffff;
+}
+.cid-tnDs7AVXsC .item-subtitle {
+  text-align: left;
+}
+.cid-tnDs7AVXsC .embla__slide {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  min-width: 410px;
+  max-width: 410px;
+}
+@media (max-width: 768px) {
+  .cid-tnDs7AVXsC .embla__slide {
+    min-width: 70%;
+    max-width: initial;
+    margin-left: 1rem !important;
+    margin-right: 1rem !important;
+  }
+}
+.cid-tnDs7AVXsC .embla__button--next,
+.cid-tnDs7AVXsC .embla__button--prev {
+  display: flex;
+}
+.cid-tnDs7AVXsC .embla__button {
+  top: 50%;
+  width: 60px;
+  height: 60px;
+  margin-top: -1.5rem;
+  font-size: 22px;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  border: 2px solid #fff;
+  border-radius: 50%;
+  transition: all 0.3s;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@media (max-width: 768px) {
+  .cid-tnDs7AVXsC .embla__button {
+    display: none;
+  }
+}
+.cid-tnDs7AVXsC .embla__button:disabled {
+  cursor: default;
+  display: none;
+}
+.cid-tnDs7AVXsC .embla__button:hover {
+  background: #000;
+  color: rgba(255, 255, 255, 0.5);
+}
+.cid-tnDs7AVXsC .embla__button.embla__button--prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-tnDs7AVXsC .embla__button.embla__button--next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+@media (max-width: 767px) {
+  .cid-tnDs7AVXsC .embla__button {
+    top: auto;
+  }
+}
+.cid-tnDs7AVXsC .embla {
+  position: relative;
+  width: 100%;
+}
+.cid-tnDs7AVXsC .embla__viewport {
+  overflow: hidden;
+  width: 100%;
+}
+.cid-tnDs7AVXsC .embla__viewport.is-draggable {
+  cursor: grab;
+}
+.cid-tnDs7AVXsC .embla__viewport.is-dragging {
+  cursor: grabbing;
+}
+.cid-tnDs7AVXsC .embla__container {
+  display: flex;
+  user-select: none;
+  -webkit-touch-callout: none;
+  -khtml-user-select: none;
+  -webkit-tap-highlight-color: transparent;
+}
+.cid-tnDs7AVXsC .mbr-section-subtitle {
+  color: #bbbbbb;
+}
+.cid-tnDNRtbtHU {
+  padding-top: 10rem;
+  padding-bottom: 10rem;
+  background-color: #000000;
+}
+.cid-tnDNRtbtHU img,
+.cid-tnDNRtbtHU .item-img {
+  width: 100%;
+}
+.cid-tnDNRtbtHU .item:focus,
+.cid-tnDNRtbtHU span:focus {
+  outline: none;
+}
+.cid-tnDNRtbtHU .item-wrapper {
+  position: relative;
+}
+.cid-tnDNRtbtHU .slide-content {
+  position: relative;
+  border-radius: 4px;
+  background: #004669;
+  height: 100%;
+  display: flex;
+  overflow: hidden;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-tnDNRtbtHU .slide-content .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tnDNRtbtHU .slide-content .item-content {
+    padding: 1rem;
+  }
+}
+.cid-tnDNRtbtHU .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-tnDNRtbtHU .mbr-section-title {
+  color: #ffffff;
+}
+.cid-tnDNRtbtHU .mbr-text,
+.cid-tnDNRtbtHU .mbr-section-btn {
+  text-align: left;
+  color: #ffffff;
+}
+.cid-tnDNRtbtHU .item-title {
+  text-align: left;
+  color: #ffffff;
+}
+.cid-tnDNRtbtHU .item-subtitle {
+  text-align: left;
+}
+.cid-tnDNRtbtHU .embla__slide {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  min-width: 410px;
+  max-width: 410px;
+}
+@media (max-width: 768px) {
+  .cid-tnDNRtbtHU .embla__slide {
+    min-width: 70%;
+    max-width: initial;
+    margin-left: 1rem !important;
+    margin-right: 1rem !important;
+  }
+}
+.cid-tnDNRtbtHU .embla__button--next,
+.cid-tnDNRtbtHU .embla__button--prev {
+  display: flex;
+}
+.cid-tnDNRtbtHU .embla__button {
+  top: 50%;
+  width: 60px;
+  height: 60px;
+  margin-top: -1.5rem;
+  font-size: 22px;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  border: 2px solid #fff;
+  border-radius: 50%;
+  transition: all 0.3s;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@media (max-width: 768px) {
+  .cid-tnDNRtbtHU .embla__button {
+    display: none;
+  }
+}
+.cid-tnDNRtbtHU .embla__button:disabled {
+  cursor: default;
+  display: none;
+}
+.cid-tnDNRtbtHU .embla__button:hover {
+  background: #000;
+  color: rgba(255, 255, 255, 0.5);
+}
+.cid-tnDNRtbtHU .embla__button.embla__button--prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-tnDNRtbtHU .embla__button.embla__button--next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+@media (max-width: 767px) {
+  .cid-tnDNRtbtHU .embla__button {
+    top: auto;
+  }
+}
+.cid-tnDNRtbtHU .embla {
+  position: relative;
+  width: 100%;
+}
+.cid-tnDNRtbtHU .embla__viewport {
+  overflow: hidden;
+  width: 100%;
+}
+.cid-tnDNRtbtHU .embla__viewport.is-draggable {
+  cursor: grab;
+}
+.cid-tnDNRtbtHU .embla__viewport.is-dragging {
+  cursor: grabbing;
+}
+.cid-tnDNRtbtHU .embla__container {
+  display: flex;
+  user-select: none;
+  -webkit-touch-callout: none;
+  -khtml-user-select: none;
+  -webkit-tap-highlight-color: transparent;
+}
+.cid-tnDNRtbtHU .mbr-section-subtitle {
+  color: #bbbbbb;
+}
+.cid-tnDn6b8aoT {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  background-color: #000000;
+}
+.cid-tnDn6b8aoT .row-links {
+  width: 100%;
+  justify-content: center;
+}
+.cid-tnDn6b8aoT .social-row {
+  width: 100%;
+  justify-content: center;
+}
+.cid-tnDn6b8aoT .media-container-row {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.cid-tnDn6b8aoT .media-container-row .foot-menu {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
+}
+.cid-tnDn6b8aoT .media-container-row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-tnDn6b8aoT .media-container-row .foot-menu li p {
+  margin: 0;
+}
+.cid-tnDn6b8aoT .media-container-row .social-list {
+  width: auto;
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+}
+.cid-tnDn6b8aoT .media-container-row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
+}
+.cid-tnDn6b8aoT .media-container-row .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-tnDn6b8aoT .media-container-row .social-list a {
+  margin: 0;
+  opacity: .5;
+  transition: .2s linear;
+}
+.cid-tnDn6b8aoT .media-container-row .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-tnDn6b8aoT .media-container-row .social-list {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+}
+.cid-tnDn6b8aoT .media-container-row .row-copirayt {
+  word-break: break-word;
+  width: 100%;
+}
+.cid-tnDn6b8aoT .media-container-row .row-copirayt p {
+  width: 100%;
+}
