create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4559,6 +4559,8 @@ a {
   text-align: right;
 }
 .cid-tnCxYLovIH {
+  padding-top: 2rem;
+  padding-bottom: 1rem;
   background-color: #000000;
 }
 .cid-tnCxYLovIH .mbr-fallback-image.disabled {
@@ -5255,6 +5257,8 @@ a {
   color: #4284df;
 }
 .cid-tnCwXZTd52 {
+  padding-top: 2rem;
+  padding-bottom: 1rem;
   background-color: #000000;
 }
 .cid-tnCwXZTd52 .mbr-fallback-image.disabled {
@@ -5290,14 +5294,18 @@ a {
 }
 .cid-tnCwXZTd52 .mbr-section-title {
   color: #ffffff;
+  text-align: right;
 }
 .cid-tnCwXZTd52 .mbr-text {
   color: #ffffff;
+  text-align: right;
 }
 .cid-tnCwXZTd52 .mbr-description {
   color: #353535;
 }
 .cid-tnDgYlVuoh {
+  padding-top: 2rem;
+  padding-bottom: 1rem;
   background-color: #000000;
 }
 .cid-tnDgYlVuoh .mbr-fallback-image.disabled {
@@ -5338,6 +5346,8 @@ a {
   color: #353535;
 }
 .cid-tnDgX3RCpC {
+  padding-top: 2rem;
+  padding-bottom: 1rem;
   background-color: #000000;
 }
 .cid-tnDgX3RCpC .mbr-fallback-image.disabled {
@@ -5373,14 +5383,18 @@ a {
 }
 .cid-tnDgX3RCpC .mbr-section-title {
   color: #ffffff;
+  text-align: right;
 }
 .cid-tnDgX3RCpC .mbr-text {
   color: #ffffff;
+  text-align: right;
 }
 .cid-tnDgX3RCpC .mbr-description {
   color: #353535;
 }
 .cid-tnDlcfG9aN {
+  padding-top: 2rem;
+  padding-bottom: 1rem;
   background-color: #000000;
 }
 .cid-tnDlcfG9aN .mbr-fallback-image.disabled {
