--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3552,6 +3552,131 @@ a {
 .cid-t924P7fzw8 .mbr-section-subtitle {
   color: #ffffff;
 }
+.cid-tqnytcrwcr {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #000000;
+}
+@media (min-width: 992px) {
+  .cid-tqnytcrwcr .carousel {
+    min-height: 1200px;
+  }
+  .cid-tqnytcrwcr .carousel img {
+    max-height: 1200px;
+    object-fit: contain;
+  }
+}
+@media (max-width: 991px) and (min-width: 768px) {
+  .cid-tqnytcrwcr .carousel {
+    min-height: 780px;
+  }
+  .cid-tqnytcrwcr .carousel img {
+    max-height: 780px;
+    object-fit: contain;
+  }
+}
+@media (max-width: 767px) {
+  .cid-tqnytcrwcr .carousel {
+    min-height: 660px;
+  }
+  .cid-tqnytcrwcr .carousel img {
+    max-height: 660px;
+    object-fit: contain;
+  }
+  .cid-tqnytcrwcr .container .carousel-control {
+    margin-bottom: 0;
+  }
+  .cid-tqnytcrwcr .content-slider-wrap {
+    width: 100% !important;
+  }
+}
+.cid-tqnytcrwcr .carousel,
+.cid-tqnytcrwcr .carousel-inner {
+  display: flex;
+  align-items: center;
+}
+.cid-tqnytcrwcr .item-wrapper {
+  width: 100%;
+}
+.cid-tqnytcrwcr .carousel-caption {
+  bottom: 40px;
+}
+.cid-tqnytcrwcr .carousel-control:hover {
+  background: #1b1b1b;
+  color: #fff;
+  opacity: 1;
+}
+.cid-tqnytcrwcr .mobi-mbri-arrow-next {
+  margin-left: 5px;
+}
+.cid-tqnytcrwcr .mobi-mbri-arrow-prev {
+  margin-right: 5px;
+}
+.cid-tqnytcrwcr .container .carousel-indicators {
+  margin-bottom: 3px;
+}
+.cid-tqnytcrwcr .carousel-control {
+  top: 50%;
+  width: 60px;
+  height: 60px;
+  margin-top: -1.5rem;
+  font-size: 22px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  transition: all 0.3s;
+}
+.cid-tqnytcrwcr .carousel-control.carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-tqnytcrwcr .carousel-control.carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+@media (max-width: 767px) {
+  .cid-tqnytcrwcr .carousel-control {
+    top: auto;
+    bottom: 1rem;
+  }
+}
+.cid-tqnytcrwcr .carousel-indicators {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 1.5rem !important;
+}
+.cid-tqnytcrwcr .carousel-indicators li {
+  max-width: 15px;
+  height: 15px;
+  width: 15px;
+  max-height: 15px;
+  margin: 3px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  opacity: 0.5;
+  transition: all 0.3s;
+}
+.cid-tqnytcrwcr .carousel-indicators li.active,
+.cid-tqnytcrwcr .carousel-indicators li:hover {
+  opacity: 0.9;
+}
+.cid-tqnytcrwcr .carousel-indicators li::after,
+.cid-tqnytcrwcr .carousel-indicators li::before {
+  content: none;
+}
+.cid-tqnytcrwcr .carousel-indicators.ie-fix {
+  left: 50%;
+  display: block;
+  width: 60%;
+  margin-left: -30%;
+  text-align: center;
+}
+@media (max-width: 768px) {
+  .cid-tqnytcrwcr .carousel-indicators {
+    display: none !important;
+  }
+}
 .cid-tnEbm4MDt3 {
   padding-top: 90px;
   padding-bottom: 90px;
