--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4583,6 +4583,77 @@ a {
 .cid-sZYKqFz1Zr .media-container-row .row-copirayt p {
   width: 100%;
 }
+.cid-AWTtf4YNCl {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #000000;
+}
+.cid-AWTtf4YNCl .mbr-slider .carousel-control {
+  background: #1b1b1b;
+}
+.cid-AWTtf4YNCl .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-AWTtf4YNCl .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-AWTtf4YNCl .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-AWTtf4YNCl .row > .row {
+  display: block;
+}
+.cid-AWTtf4YNCl .mbr-gallery-item {
+  width: 100%;
+}
+.cid-AWTtf4YNCl .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #554346;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+}
+.cid-AWTtf4YNCl .mbr-gallery-item > div {
+  position: relative;
+}
+.cid-AWTtf4YNCl .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+  background: transparent !important;
+}
+.cid-AWTtf4YNCl .mbr-gallery-item > div:hover:before {
+  opacity: 0.7 !important;
+}
+.cid-AWTtf4YNCl .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  z-index: 2;
+}
+.cid-AWTtf4YNCl .mbr-gallery-title:before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  background: #554346 !important;
+  opacity: 0.7;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+}
 .cid-t8zZZMzDqm {
   padding-top: 5rem;
   padding-bottom: 5rem;
