--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4425,10 +4425,159 @@ a {
 .cid-tr3mHsQmUW .mbr-section-title {
   color: #232323;
 }
-.cid-tnEbm4MDt3 {
+.cid-tr3G3WJ6lH {
   padding-top: 90px;
   padding-bottom: 90px;
   background-color: #000000;
+}
+.cid-tr3G3WJ6lH .row {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 40px;
+}
+.cid-tr3G3WJ6lH .column {
+  flex: 100%;
+  max-width: 100%;
+}
+.cid-tr3G3WJ6lH .column img {
+  vertical-align: middle;
+}
+.cid-tr3G3WJ6lH .container {
+  position: relative;
+  width: 100%;
+}
+.cid-tr3G3WJ6lH .image {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+.cid-tr3G3WJ6lH .overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: 0.5s ease;
+  background-color: black;
+}
+.cid-tr3G3WJ6lH .container:hover .overlay {
+  opacity: 0.5;
+}
+.cid-tr3G3WJ6lH .text {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+@media only screen and (min-width: 480px) {
+  .cid-tr3G3WJ6lH .column {
+    flex: 50%;
+    max-width: 50%;
+  }
+}
+@media only screen and (min-width: 1024px) {
+  .cid-tr3G3WJ6lH .column {
+    flex: 33.3%;
+    max-width: 33.3%;
+  }
+}
+.cid-tr3G3WJ6lH .rt-container {
+  margin: 0 auto;
+  padding-left: 12px;
+  padding-right: 12px;
+}
+.cid-tr3G3WJ6lH .rt-row:before,
+.cid-tr3G3WJ6lH .rt-row:after {
+  display: table;
+  line-height: 0;
+  content: "";
+}
+.cid-tr3G3WJ6lH .rt-row:after {
+  clear: both;
+}
+.cid-tr3G3WJ6lH [class^="col-rt-"] {
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  padding: 0 15px;
+  min-height: 1px;
+  position: relative;
+}
+@media (min-width: 768px) {
+  .cid-tr3G3WJ6lH .rt-container {
+    width: 750px;
+  }
+  .cid-tr3G3WJ6lH [class^="col-rt-"] {
+    float: left;
+    width: 49.9999999999%;
+  }
+  .cid-tr3G3WJ6lH .col-rt-6,
+  .cid-tr3G3WJ6lH .col-rt-12 {
+    width: 100%;
+  }
+}
+@media (min-width: 1200px) {
+  .cid-tr3G3WJ6lH .rt-container {
+    width: 1170px;
+  }
+  .cid-tr3G3WJ6lH .col-rt-1 {
+    width: 16.6%;
+  }
+  .cid-tr3G3WJ6lH .col-rt-2 {
+    width: 30.33%;
+  }
+  .cid-tr3G3WJ6lH .col-rt-3 {
+    width: 50%;
+  }
+  .cid-tr3G3WJ6lH .col-rt-4 {
+    width: 67.664%;
+  }
+  .cid-tr3G3WJ6lH .col-rt-5 {
+    width: 83.33%;
+  }
+}
+@media only screen and (min-width: 240px) and (max-width: 768px) {
+  .cid-tr3G3WJ6lH .ScriptTop h1,
+  .cid-tr3G3WJ6lH .ScriptTop ul {
+    text-align: center;
+  }
+  .cid-tr3G3WJ6lH .ScriptTop h1 {
+    margin-top: 0;
+    margin-bottom: 15px;
+  }
+  .cid-tr3G3WJ6lH .ScriptTop ul {
+    margin-top: 12px;
+  }
+  .cid-tr3G3WJ6lH .ScriptHeader h1,
+  .cid-tr3G3WJ6lH .ScriptHeader h2,
+  .cid-tr3G3WJ6lH .scriptnav ul {
+    text-align: center;
+  }
+  .cid-tr3G3WJ6lH .scriptnav ul {
+    margin-top: 12px;
+  }
+  .cid-tr3G3WJ6lH #float-right {
+    float: none;
+  }
+}
+@media screen and (max-width: 768px) {
+  .cid-tr3G3WJ6lH .show-on-desktop {
+    display: none;
+  }
+}
+@media screen and (min-width: 768px) {
+  .cid-tr3G3WJ6lH .hide-on-desktop {
+    display: none;
+  }
 }
 .cid-t8DlOLIzTO {
   padding-top: 4rem;
@@ -4582,77 +4731,6 @@ a {
 }
 .cid-sZYKqFz1Zr .media-container-row .row-copirayt p {
   width: 100%;
-}
-.cid-AWTtf4YNCl {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #000000;
-}
-.cid-AWTtf4YNCl .mbr-slider .carousel-control {
-  background: #1b1b1b;
-}
-.cid-AWTtf4YNCl .mbr-slider .carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-AWTtf4YNCl .mbr-slider .carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-AWTtf4YNCl .mbr-slider .modal-body .close {
-  background: #1b1b1b;
-}
-.cid-AWTtf4YNCl .row > .row {
-  display: block;
-}
-.cid-AWTtf4YNCl .mbr-gallery-item {
-  width: 100%;
-}
-.cid-AWTtf4YNCl .mbr-gallery-item > div::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: #554346;
-  opacity: 0;
-  -webkit-transition: 0.2s opacity ease-in-out;
-  transition: 0.2s opacity ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
-}
-.cid-AWTtf4YNCl .mbr-gallery-item > div {
-  position: relative;
-}
-.cid-AWTtf4YNCl .mbr-gallery-item > div:hover .mbr-gallery-title::before {
-  background: transparent !important;
-}
-.cid-AWTtf4YNCl .mbr-gallery-item > div:hover:before {
-  opacity: 0.7 !important;
-}
-.cid-AWTtf4YNCl .mbr-gallery-title {
-  font-size: .9em;
-  position: absolute;
-  display: block;
-  width: 100%;
-  bottom: 0;
-  padding: 1rem;
-  color: #fff;
-  z-index: 2;
-}
-.cid-AWTtf4YNCl .mbr-gallery-title:before {
-  content: " ";
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  position: absolute;
-  background: #554346 !important;
-  opacity: 0.7;
-  -webkit-transition: 0.2s background ease-in-out;
-  transition: 0.2s background ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
 }
 .cid-t8zZZMzDqm {
   padding-top: 5rem;
