--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3420,560 +3420,6 @@ a {
 .cid-t924P7fzw8 .mbr-section-subtitle {
   color: #ffffff;
 }
-.cid-tr3izDx9Y2 {
-  padding-top: 6rem;
-  padding-bottom: 1rem;
-  background-color: #000000;
-}
-.cid-tr3izDx9Y2 .mbr-fallback-image.disabled {
-  display: none;
-}
-.cid-tr3izDx9Y2 .mbr-fallback-image {
-  display: block;
-  background-size: cover;
-  background-position: center center;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-}
-.cid-tr3izDx9Y2 .row {
-  margin-left: 0;
-  margin-right: 0;
-}
-.cid-tr3izDx9Y2 .item {
-  padding-left: 0;
-  padding-right: 0;
-}
-.cid-tr3izDx9Y2 .item-wrapper {
-  height: 500px;
-  position: relative;
-}
-.cid-tr3izDx9Y2 .item-wrapper img {
-  height: 100%;
-  object-fit: cover;
-}
-.cid-tr3izDx9Y2 .item-wrapper .icon-wrapper {
-  pointer-events: none;
-  position: absolute;
-  width: 60px;
-  height: 60px;
-  font-size: 22px;
-  left: 50%;
-  top: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 2px solid #ffffff;
-  border-radius: 50%;
-  opacity: 0;
-  color: #ffffff;
-  transform: translateX(-50%) translateY(-50%);
-  background-color: #1b1b1b;
-  transition: 0.2s;
-}
-.cid-tr3izDx9Y2 .item-wrapper:hover .icon-wrapper {
-  opacity: 0.7;
-}
-.cid-tr3izDx9Y2 .carousel-control,
-.cid-tr3izDx9Y2 .close {
-  background: #1b1b1b;
-}
-.cid-tr3izDx9Y2 .carousel-control-prev {
-  margin-left: 2.5rem;
-}
-.cid-tr3izDx9Y2 .carousel-control-prev span {
-  margin-right: 5px;
-}
-.cid-tr3izDx9Y2 .carousel-control-next {
-  margin-right: 2.5rem;
-}
-.cid-tr3izDx9Y2 .carousel-control-next span {
-  margin-left: 5px;
-}
-.cid-tr3izDx9Y2 .close {
-  position: fixed;
-  opacity: 0.5;
-  font-size: 22px;
-  font-weight: 300;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  color: #fff;
-  top: 2.5rem;
-  right: 2.5rem;
-  border: 2px solid #fff;
-  text-shadow: none;
-  z-index: 5;
-  transition: opacity 0.3s ease;
-  font-family: 'Moririse2';
-  align-items: center;
-  justify-content: center;
-  display: flex;
-}
-.cid-tr3izDx9Y2 .close::before {
-  content: '\e91a';
-}
-.cid-tr3izDx9Y2 .close:hover {
-  opacity: 1;
-  background: #000;
-  color: #fff;
-}
-.cid-tr3izDx9Y2 .carousel-control {
-  display: flex;
-  top: 50%;
-  width: 60px;
-  height: 60px;
-  margin-top: -1.5rem;
-  font-size: 22px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  transition: all 0.3s;
-}
-.cid-tr3izDx9Y2 .carousel-control.carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-tr3izDx9Y2 .carousel-control.carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-@media (max-width: 767px) {
-  .cid-tr3izDx9Y2 .carousel-control {
-    top: auto;
-    bottom: 1rem;
-  }
-}
-.cid-tr3izDx9Y2 .carousel-indicators {
-  position: absolute;
-  bottom: 0;
-  margin-bottom: 3px;
-}
-.cid-tr3izDx9Y2 .carousel-indicators li {
-  max-width: 15px;
-  height: 15px;
-  width: 15px;
-  max-height: 15px;
-  margin: 3px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  opacity: 0.5;
-  transition: all 0.3s;
-}
-.cid-tr3izDx9Y2 .carousel-indicators li.active,
-.cid-tr3izDx9Y2 .carousel-indicators li:hover {
-  opacity: 0.9;
-}
-.cid-tr3izDx9Y2 .carousel-indicators li::after,
-.cid-tr3izDx9Y2 .carousel-indicators li::before {
-  content: none;
-}
-.cid-tr3izDx9Y2 .carousel-indicators.ie-fix {
-  left: 50%;
-  display: block;
-  width: 60%;
-  margin-left: -30%;
-  text-align: center;
-}
-@media (max-width: 768px) {
-  .cid-tr3izDx9Y2 .carousel-indicators {
-    display: none !important;
-  }
-}
-@media (max-width: 991px) {
-  .cid-tr3izDx9Y2 .carousel-indicators {
-    margin-bottom: 3.625rem !important;
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-tr3izDx9Y2 .carousel-indicators {
-    display: none;
-  }
-}
-.cid-tr3izDx9Y2 .carousel-inner {
-  display: flex;
-  align-items: center;
-}
-.cid-tr3izDx9Y2 .carousel-inner > .active {
-  display: block;
-}
-.cid-tr3izDx9Y2 .carousel-control.left {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-tr3izDx9Y2 .carousel-control.right {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-tr3izDx9Y2 .carousel-control:hover {
-  background: #1b1b1b;
-  color: #fff;
-  opacity: 1;
-}
-@media (max-width: 768px) {
-  .cid-tr3izDx9Y2 .carousel-control,
-  .cid-tr3izDx9Y2 .carousel-indicators,
-  .cid-tr3izDx9Y2 .modal .close {
-    position: fixed;
-  }
-}
-@media (max-width: 767px) {
-  .cid-tr3izDx9Y2 .mbr-slider .carousel-control {
-    top: auto;
-    bottom: 20px;
-  }
-  .cid-tr3izDx9Y2 .mbr-slider > .container .carousel-control {
-    margin-bottom: 0;
-  }
-}
-.cid-tr3izDx9Y2 .carousel-indicators .active,
-.cid-tr3izDx9Y2 .carousel-indicators li {
-  width: 7px;
-  height: 7px;
-  margin: 3px;
-  background: #000000;
-  opacity: 0.5;
-  border: 4px solid #000000;
-}
-.cid-tr3izDx9Y2 .carousel-indicators .active {
-  background: #fff;
-}
-.cid-tr3izDx9Y2 .carousel-indicators li {
-  max-width: 15px;
-  max-height: 15px;
-  border-radius: 50%;
-}
-.cid-tr3izDx9Y2 .modal {
-  padding-left: 0 !important;
-  position: fixed;
-  overflow: hidden;
-  padding-right: 0 !important;
-}
-.cid-tr3izDx9Y2 .modal-dialog {
-  margin: 0 auto;
-  max-width: 100%;
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-.cid-tr3izDx9Y2 .modal-content {
-  border-radius: 0;
-  border: none;
-  background: transparent;
-}
-.cid-tr3izDx9Y2 .modal-body {
-  padding: 0;
-  display: flex;
-  align-items: center;
-}
-.cid-tr3izDx9Y2 .modal-body img {
-  width: 100%;
-  object-fit: contain;
-  max-height: calc(100vh - 1.75rem);
-}
-.cid-tr3izDx9Y2 .carousel {
-  width: 100%;
-}
-.cid-tr3izDx9Y2 .modal-backdrop.in {
-  opacity: 0.8;
-}
-.cid-tr3izDx9Y2 .modal.fade .modal-dialog {
-  transition: margin-top 0.3s ease-out;
-}
-.cid-tr3izDx9Y2 .modal.fade .modal-dialog,
-.cid-tr3izDx9Y2 .modal.in .modal-dialog {
-  transform: none;
-}
-.cid-tr3izDx9Y2 .mbr-gallery .item-wrapper {
-  cursor: pointer;
-}
-.cid-tr3izDx9Y2 H6 {
-  text-align: center;
-  color: #bbbbbb;
-}
-.cid-tr3izDx9Y2 H3 {
-  color: #ffffff;
-}
-.cid-tr3k4iFP0S {
-  padding-top: 1rem;
-  padding-bottom: 5rem;
-  background-color: #000000;
-}
-.cid-tr3k4iFP0S .mbr-fallback-image.disabled {
-  display: none;
-}
-.cid-tr3k4iFP0S .mbr-fallback-image {
-  display: block;
-  background-size: cover;
-  background-position: center center;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-}
-.cid-tr3k4iFP0S .row {
-  margin-left: 0;
-  margin-right: 0;
-}
-.cid-tr3k4iFP0S .item {
-  padding-left: 0;
-  padding-right: 0;
-}
-.cid-tr3k4iFP0S .item-wrapper {
-  height: 500px;
-  position: relative;
-}
-.cid-tr3k4iFP0S .item-wrapper img {
-  height: 100%;
-  object-fit: cover;
-}
-.cid-tr3k4iFP0S .item-wrapper .icon-wrapper {
-  pointer-events: none;
-  position: absolute;
-  width: 60px;
-  height: 60px;
-  font-size: 22px;
-  left: 50%;
-  top: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 2px solid #ffffff;
-  border-radius: 50%;
-  opacity: 0;
-  color: #ffffff;
-  transform: translateX(-50%) translateY(-50%);
-  background-color: #1b1b1b;
-  transition: 0.2s;
-}
-.cid-tr3k4iFP0S .item-wrapper:hover .icon-wrapper {
-  opacity: 0.7;
-}
-.cid-tr3k4iFP0S .carousel-control,
-.cid-tr3k4iFP0S .close {
-  background: #1b1b1b;
-}
-.cid-tr3k4iFP0S .carousel-control-prev {
-  margin-left: 2.5rem;
-}
-.cid-tr3k4iFP0S .carousel-control-prev span {
-  margin-right: 5px;
-}
-.cid-tr3k4iFP0S .carousel-control-next {
-  margin-right: 2.5rem;
-}
-.cid-tr3k4iFP0S .carousel-control-next span {
-  margin-left: 5px;
-}
-.cid-tr3k4iFP0S .close {
-  position: fixed;
-  opacity: 0.5;
-  font-size: 22px;
-  font-weight: 300;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  color: #fff;
-  top: 2.5rem;
-  right: 2.5rem;
-  border: 2px solid #fff;
-  text-shadow: none;
-  z-index: 5;
-  transition: opacity 0.3s ease;
-  font-family: 'Moririse2';
-  align-items: center;
-  justify-content: center;
-  display: flex;
-}
-.cid-tr3k4iFP0S .close::before {
-  content: '\e91a';
-}
-.cid-tr3k4iFP0S .close:hover {
-  opacity: 1;
-  background: #000;
-  color: #fff;
-}
-.cid-tr3k4iFP0S .carousel-control {
-  display: flex;
-  top: 50%;
-  width: 60px;
-  height: 60px;
-  margin-top: -1.5rem;
-  font-size: 22px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  transition: all 0.3s;
-}
-.cid-tr3k4iFP0S .carousel-control.carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-tr3k4iFP0S .carousel-control.carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-@media (max-width: 767px) {
-  .cid-tr3k4iFP0S .carousel-control {
-    top: auto;
-    bottom: 1rem;
-  }
-}
-.cid-tr3k4iFP0S .carousel-indicators {
-  position: absolute;
-  bottom: 0;
-  margin-bottom: 3px;
-}
-.cid-tr3k4iFP0S .carousel-indicators li {
-  max-width: 15px;
-  height: 15px;
-  width: 15px;
-  max-height: 15px;
-  margin: 3px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  opacity: 0.5;
-  transition: all 0.3s;
-}
-.cid-tr3k4iFP0S .carousel-indicators li.active,
-.cid-tr3k4iFP0S .carousel-indicators li:hover {
-  opacity: 0.9;
-}
-.cid-tr3k4iFP0S .carousel-indicators li::after,
-.cid-tr3k4iFP0S .carousel-indicators li::before {
-  content: none;
-}
-.cid-tr3k4iFP0S .carousel-indicators.ie-fix {
-  left: 50%;
-  display: block;
-  width: 60%;
-  margin-left: -30%;
-  text-align: center;
-}
-@media (max-width: 768px) {
-  .cid-tr3k4iFP0S .carousel-indicators {
-    display: none !important;
-  }
-}
-@media (max-width: 991px) {
-  .cid-tr3k4iFP0S .carousel-indicators {
-    margin-bottom: 3.625rem !important;
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-tr3k4iFP0S .carousel-indicators {
-    display: none;
-  }
-}
-.cid-tr3k4iFP0S .carousel-inner {
-  display: flex;
-  align-items: center;
-}
-.cid-tr3k4iFP0S .carousel-inner > .active {
-  display: block;
-}
-.cid-tr3k4iFP0S .carousel-control.left {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-tr3k4iFP0S .carousel-control.right {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-tr3k4iFP0S .carousel-control:hover {
-  background: #1b1b1b;
-  color: #fff;
-  opacity: 1;
-}
-@media (max-width: 768px) {
-  .cid-tr3k4iFP0S .carousel-control,
-  .cid-tr3k4iFP0S .carousel-indicators,
-  .cid-tr3k4iFP0S .modal .close {
-    position: fixed;
-  }
-}
-@media (max-width: 767px) {
-  .cid-tr3k4iFP0S .mbr-slider .carousel-control {
-    top: auto;
-    bottom: 20px;
-  }
-  .cid-tr3k4iFP0S .mbr-slider > .container .carousel-control {
-    margin-bottom: 0;
-  }
-}
-.cid-tr3k4iFP0S .carousel-indicators .active,
-.cid-tr3k4iFP0S .carousel-indicators li {
-  width: 7px;
-  height: 7px;
-  margin: 3px;
-  background: #000000;
-  opacity: 0.5;
-  border: 4px solid #000000;
-}
-.cid-tr3k4iFP0S .carousel-indicators .active {
-  background: #fff;
-}
-.cid-tr3k4iFP0S .carousel-indicators li {
-  max-width: 15px;
-  max-height: 15px;
-  border-radius: 50%;
-}
-.cid-tr3k4iFP0S .modal {
-  padding-left: 0 !important;
-  position: fixed;
-  overflow: hidden;
-  padding-right: 0 !important;
-}
-.cid-tr3k4iFP0S .modal-dialog {
-  margin: 0 auto;
-  max-width: 100%;
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-.cid-tr3k4iFP0S .modal-content {
-  border-radius: 0;
-  border: none;
-  background: transparent;
-}
-.cid-tr3k4iFP0S .modal-body {
-  padding: 0;
-  display: flex;
-  align-items: center;
-}
-.cid-tr3k4iFP0S .modal-body img {
-  width: 100%;
-  object-fit: contain;
-  max-height: calc(100vh - 1.75rem);
-}
-.cid-tr3k4iFP0S .carousel {
-  width: 100%;
-}
-.cid-tr3k4iFP0S .modal-backdrop.in {
-  opacity: 0.8;
-}
-.cid-tr3k4iFP0S .modal.fade .modal-dialog {
-  transition: margin-top 0.3s ease-out;
-}
-.cid-tr3k4iFP0S .modal.fade .modal-dialog,
-.cid-tr3k4iFP0S .modal.in .modal-dialog {
-  transform: none;
-}
-.cid-tr3k4iFP0S .mbr-gallery .item-wrapper {
-  cursor: pointer;
-}
-.cid-tr3k4iFP0S H6 {
-  text-align: center;
-  color: #bbbbbb;
-}
-.cid-tr3k4iFP0S H3 {
-  color: #ffffff;
-}
 .cid-tr3G3WJ6lH {
   padding-top: 90px;
   padding-bottom: 90px;
@@ -4128,138 +3574,73 @@ a {
     display: none;
   }
 }
-.cid-tqnytcrwcr {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-  background-color: #000000;
+.cid-tr4bQzl19e {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #232323;
 }
-@media (min-width: 992px) {
-  .cid-tqnytcrwcr .carousel {
-    min-height: 1200px;
-  }
-  .cid-tqnytcrwcr .carousel img {
-    max-height: 1200px;
-    object-fit: contain;
-  }
-}
-@media (max-width: 991px) and (min-width: 768px) {
-  .cid-tqnytcrwcr .carousel {
-    min-height: 780px;
-  }
-  .cid-tqnytcrwcr .carousel img {
-    max-height: 780px;
-    object-fit: contain;
-  }
-}
-@media (max-width: 767px) {
-  .cid-tqnytcrwcr .carousel {
-    min-height: 660px;
-  }
-  .cid-tqnytcrwcr .carousel img {
-    max-height: 660px;
-    object-fit: contain;
-  }
-  .cid-tqnytcrwcr .container .carousel-control {
-    margin-bottom: 0;
-  }
-  .cid-tqnytcrwcr .content-slider-wrap {
-    width: 100% !important;
-  }
-}
-.cid-tqnytcrwcr .carousel,
-.cid-tqnytcrwcr .carousel-inner {
-  display: flex;
-  align-items: center;
-}
-.cid-tqnytcrwcr .item-wrapper {
+.cid-tr4bQzl19e img,
+.cid-tr4bQzl19e .item-img {
   width: 100%;
 }
-.cid-tqnytcrwcr .carousel-caption {
-  bottom: 40px;
+.cid-tr4bQzl19e .item:focus,
+.cid-tr4bQzl19e span:focus {
+  outline: none;
 }
-.cid-tqnytcrwcr .carousel-control:hover {
-  background: #1b1b1b;
-  color: #fff;
-  opacity: 1;
+.cid-tr4bQzl19e .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
 }
-.cid-tqnytcrwcr .mobi-mbri-arrow-next {
-  margin-left: 5px;
+.cid-tr4bQzl19e .row {
+  margin-left: 0;
+  margin-right: 0;
 }
-.cid-tqnytcrwcr .mobi-mbri-arrow-prev {
-  margin-right: 5px;
+.cid-tr4bQzl19e .item {
+  padding: 0;
+  margin: 0;
 }
-.cid-tqnytcrwcr .container .carousel-indicators {
-  margin-bottom: 3px;
+.cid-tr4bQzl19e .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #fafafa;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
 }
-.cid-tqnytcrwcr .carousel-control {
-  top: 50%;
-  width: 60px;
-  height: 60px;
-  margin-top: -1.5rem;
-  font-size: 22px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  transition: all 0.3s;
-}
-.cid-tqnytcrwcr .carousel-control.carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-tqnytcrwcr .carousel-control.carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-@media (max-width: 767px) {
-  .cid-tqnytcrwcr .carousel-control {
-    top: auto;
-    bottom: 1rem;
+@media (min-width: 992px) {
+  .cid-tr4bQzl19e .item-wrapper .item-content {
+    padding: 2rem;
   }
 }
-.cid-tqnytcrwcr .carousel-indicators {
-  position: absolute;
-  bottom: 0;
-  margin-bottom: 1.5rem !important;
+@media (max-width: 991px) {
+  .cid-tr4bQzl19e .item-wrapper .item-content {
+    padding: 1rem;
+  }
 }
-.cid-tqnytcrwcr .carousel-indicators li {
-  max-width: 15px;
-  height: 15px;
-  width: 15px;
-  max-height: 15px;
-  margin: 3px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  opacity: 0.5;
-  transition: all 0.3s;
+.cid-tr4bQzl19e .item-wrapper {
+  background: transparent;
 }
-.cid-tqnytcrwcr .carousel-indicators li.active,
-.cid-tqnytcrwcr .carousel-indicators li:hover {
-  opacity: 0.9;
+.cid-tr4bQzl19e .mbr-section-btn {
+  margin-top: auto !important;
 }
-.cid-tqnytcrwcr .carousel-indicators li::after,
-.cid-tqnytcrwcr .carousel-indicators li::before {
-  content: none;
+.cid-tr4bQzl19e .mbr-section-title {
+  color: #232323;
 }
-.cid-tqnytcrwcr .carousel-indicators.ie-fix {
-  left: 50%;
-  display: block;
-  width: 60%;
-  margin-left: -30%;
+.cid-tr4bQzl19e .mbr-text,
+.cid-tr4bQzl19e .mbr-section-btn {
+  text-align: left;
+}
+.cid-tr4bQzl19e .item-title {
   text-align: center;
-}
-@media (max-width: 768px) {
-  .cid-tqnytcrwcr .carousel-indicators {
-    display: none !important;
-  }
-}
-.cid-tqnytcrwcr H3 {
   color: #ffffff;
+}
+.cid-tr4bQzl19e .item-subtitle {
+  text-align: center;
 }
 .cid-tr3mGFfzwJ {
   padding-top: 6rem;
   padding-bottom: 6rem;
-  background-color: #ffffff;
+  background-color: #000000;
 }
 .cid-tr3mGFfzwJ .mbr-fallback-image.disabled {
   display: none;
@@ -4529,55 +3910,8 @@ a {
 .cid-tr3mGFfzwJ H6 {
   text-align: center;
 }
-.cid-tr3mHsQmUW {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-  background-color: #ffffff;
-}
-.cid-tr3mHsQmUW img,
-.cid-tr3mHsQmUW .item-img {
-  width: 100%;
-}
-.cid-tr3mHsQmUW .item:focus,
-.cid-tr3mHsQmUW span:focus {
-  outline: none;
-}
-.cid-tr3mHsQmUW .item {
-  cursor: pointer;
-  margin-bottom: 2rem;
-  position: relative;
-}
-.cid-tr3mHsQmUW .row {
-  margin-left: 0;
-  margin-right: 0;
-}
-.cid-tr3mHsQmUW .item {
-  padding: 0;
-  margin: 0;
-}
-.cid-tr3mHsQmUW .item-wrapper {
-  position: unset;
-  border-radius: 4px;
-  background: #fafafa;
-  height: 100%;
-  display: flex;
-  flex-flow: column nowrap;
-}
-@media (min-width: 992px) {
-  .cid-tr3mHsQmUW .item-wrapper .item-content {
-    padding: 2rem;
-  }
-}
-@media (max-width: 991px) {
-  .cid-tr3mHsQmUW .item-wrapper .item-content {
-    padding: 1rem;
-  }
-}
-.cid-tr3mHsQmUW .mbr-section-btn {
-  margin-top: auto !important;
-}
-.cid-tr3mHsQmUW .mbr-section-title {
-  color: #232323;
+.cid-tr3mGFfzwJ H3 {
+  color: #ffffff;
 }
 .cid-t8DlOLIzTO {
   padding-top: 4rem;
